# autoredistrict

./: .gitignore  AGENTS.md  README.md  data_fetcher.py  main.py  pyproject.toml  redistricting_algorithms.py  redistricting_worker.py  requirements.txt  worker.py
autoredistrict/: app.py
autoredistrict/core/: apportionment.py
autoredistrict/data/: partisan_data.py
autoredistrict/workers/: data_worker.py
data/: provider_sources.yaml
src/: app.py  cli.py
src/autoredistrict/: app.py  cli.py
src/autoredistrict/core/: redistricting_algorithms.py
src/autoredistrict/data/: partisan_providers.py
src/autoredistrict/rendering/: map_generator.py
src/autoredistrict/workers/: data_worker.py  redistricting_worker.py
src/core/: apportionment.py  redistricting_algorithms.py  utils.py
src/data/: data_fetcher.py  partisan_data.py  partisan_providers.py
src/rendering/: map_generator.py
src/workers/: data_worker.py  redistricting_worker.py
tools/: generate_providers.py
