[project]
name = "autoredistrict"
version = "0.1.0"
description = "Congressional redistricting application with automatic district generation"
requires-python = ">=3.11"
dependencies = [
    "census",
    "geopandas",
    "matplotlib",
    "numpy",
    "pandas",
    "pandas-stubs>=2.0.0",
    "requests",
    "shapely",
    "us",
    "pydataverse",
    "PyYAML",
    "ttkbootstrap",
]
